--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </main>
     <footer class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a href="https://www.frontendmentor.io/learning-paths/getting-started-on-frontend-mentor-XJhRWRREZd/steps/66169aff2f40450f9109dc33/challenge/start" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://www.frontendmentor.io/profile/MellTins">Melissa Martins</a>.
     </footer>
   </body>
 </html>
